src/other/mico-2.3.12/test/idl/error/expected-stderr-case10.idl
case10.idl:9: type 'U' has identical members
